# iot-ide-c-v4

./: .gitignore  CMakeLists.txt  Makefile  README.md  aarch64-toolchain.cmake
config/: device_config.json
include/: deploy_manager.h  device_config.h  ide_connection.h  start_manager.h  thing_model.h  trace_simulator.h
scripts/: download_sdk.sh  install_service.sh  run.sh
src/: deploy_manager.c  device_config.c  ide_connection.c  main.c  start_manager.c  thing_model.c  trace_simulator.c
